; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/q3_ui/extr_ui_servers2.c_Punkbuster_ConfirmDisable.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/q3_ui/extr_ui_servers2.c_Punkbuster_ConfirmDisable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@punkbuster_msg = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"cl_punkbuster\00", align 1
@g_arenaservers = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @Punkbuster_ConfirmDisable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Punkbuster_ConfirmDisable(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = call i32 @trap_SetPbClStatus(i32 0)
  %7 = load i32, i32* @punkbuster_msg, align 4
  %8 = call i32 @UI_Message(i32 %7)
  br label %9

9:                                                ; preds = %5, %1
  %10 = call i32 @trap_Cvar_VariableValue(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %11 = call i32 @Com_Clamp(i32 0, i32 1, i32 %10)
  store i32 %11, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @g_arenaservers, i32 0, i32 0, i32 0), align 4
  ret void
}

declare dso_local i32 @trap_SetPbClStatus(i32) #1

declare dso_local i32 @UI_Message(i32) #1

declare dso_local i32 @Com_Clamp(i32, i32, i32) #1

declare dso_local i32 @trap_Cvar_VariableValue(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
